Remove the provision user automatically

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -24,3 +24,11 @@
     mode: 0440
 - include: ubuntu.yml
   when: ansible_distribution == "Ubuntu"
+- name: Remove provision user
+  user:
+    name: provision
+    state: absent
+- name: Remove provision group
+  group:
+    name: provision
+    state: absent
