add role to setup a cron job to run ansible every 15 minutes on the machine

--- a/viseron.yml
+++ b/viseron.yml
@@ -4,6 +4,7 @@
   roles:
     - role: common
     - role: github-client
+    - role: ansible-cron
     - role: nickjj.docker
       tags: ["docker"]
       vars:
