--- a/host_vars/test.viseron.hogs.tswn.us.yml
+++ b/host_vars/test.viseron.hogs.tswn.us.yml
@@ -1,6 +1,9 @@
 ---
+ansible_cron__inventory_file: "testing-inventory"
+
 eth0_ip4: 10.117.0.29
 eth0_ip6: fd36:3eb3:43b0:75::1d
+
 viseron__cifs_address: test.cortana.hogs.tswn.us
 viseron__cifs_username: homeassistant
 viseron__cifs_password: !vault |
