Basic time synchronization with chrony (ubuntu only)

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -2,6 +2,8 @@
 # defaults file for common
 common__etc_dir: "/etc"
 
+common__ntp_pool: "pool.ntp.hogs.tswn.us"
+
 common__unix_groups:
   - name: "ansible"
     gid: 2000
