ansible-cron should not clobber existing group memberships of the ansible user

--- a/roles/ansible-cron/tasks/main.yml
+++ b/roles/ansible-cron/tasks/main.yml
@@ -11,6 +11,7 @@
 
 - name: Add ansible user to srcs group
   ansible.builtin.user:
+    append: yes
     name: "ansible"
     groups:
       - "srcs"
