--- a/docker-ssd-host.yml
+++ b/docker-ssd-host.yml
@@ -3,7 +3,8 @@
   become: true
   roles:
     - role: common
-    # - role: github-client
+    - role: github-client
+    - role: ansible-cron
     - role: nickjj.docker
       tags: ["docker"]
     - role: factorio
