--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -29,4 +29,4 @@
     name: ubuntu
     state: absent
     remove: yes
-  when: ansible_architecture == "aarch64"
+  when: ansible_distribution == "Ubuntu"
