add a role for open sprinkler install

--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,5 @@
 ---
 - import_playbook: docker-ssd-host.yml
 - import_playbook: dns.yml
+- import_playbook: opensprinkler.yml
 - import_playbook: viseron.yml
