Update provisioning instructions for freebsd, once again

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -38,6 +38,8 @@
 - include: facts.yml
 
 # Platform-specific stuff
+- include: freebsd.yml
+  when: ansible_distribution == "FreeBSD"
 - include: ubuntu.yml
   when: ansible_distribution == "Ubuntu"
 
