--- a/roles/ansible-cron/tasks/main.yml
+++ b/roles/ansible-cron/tasks/main.yml
@@ -1,12 +1,17 @@
 ---
 # tasks file for ansible-cron
-- name: Ensure ansible dependencies are installed
+- ansible.builtin.assert:
+    that: "ansible_cron__inventory_file == 'prod-inventory' or ansible_cron__inventory_file == 'prod-inventory'"
+    fail_msg: "Please set ansible_cron__inventory_file to the correct inventory file in host_vars/{{ inventory_hostname }}.yml"
+
+- name: "Ensure ansible dependencies are installed"
   ansible.builtin.apt:
     name: "software-properties-common"
     state: "latest"
-- name: Ensure ansible is installed
-  ansible.builtin.apt:
-    name: "ansible"
+  when: ansible_distribution == "Ubuntu"
+- name: "Ensure ansible is installed"
+  ansible.builtin.package:
+    name: "{% if ansible_distribution == 'FreeBSD' %}py37-ansible{% else %}ansible{% endif %}"
     state: "latest"
 
 - name: Add ansible user to srcs group
@@ -19,8 +24,6 @@
   ansible.builtin.git:
     repo: "https://github.com/sdwilsh/ansible-playbooks.git"
     dest: "/src/ansible-playbooks"
-  become: yes
-  become_user: "ansible"
 - name: Create vault password file
   ansible.builtin.copy:
     dest: "/src/ansible-playbooks/.ansible_vault_password"
