Ensure to delegate mysql user setup to inventory host

--- a/roles/mysql-server/tasks/main.yml
+++ b/roles/mysql-server/tasks/main.yml
@@ -103,6 +103,7 @@
   loop: "{{ mysql_server__databases }}"
 - name: "Setup configured users"
   no_log: True
+  delegate_to: "{{ inventory_hostname }}"
   community.mysql.mysql_user:
     name: "{{ item.name }}"
     host: "{{ item.host }}"
