--- a/roles/common/tasks/iscsi.yml
+++ b/roles/common/tasks/iscsi.yml
@@ -3,10 +3,17 @@
 - set_fact:
     common__iscsi_initiator_iqn: "{{ common__iscsi_initiator_iqn_base }}:{{ ansible_hostname }}"
     common__iscsi_target_iqn: "{{ common__iscsi_target_iqn_base }}:{{ ansible_hostname }}"
+- name: "Ensure /etc/iscsi exists"
+  ansible.builtin.file:
+    path: "/etc/iscsi"
+    mode: "u=rwx,g=rx,o=rx"
+    owner: "root"
+    group: "root"
+    state: "directory"
 - name: Setup /etc/iscsi/initiatorname.iscsi
   ansible.builtin.copy:
     dest: "/etc/iscsi/initiatorname.iscsi"
     content: "InitiatorName={{ common__iscsi_initiator_iqn }}"
-    mode: "u=rw"
+    mode: "u=rw,g=r,o=r"
     owner: "root"
     group: "root"
