--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -37,6 +37,16 @@
 
 - include: facts.yml
 
+# Networking
+- name: "Set hostname"
+  ansible.builtin.hostname:
+    name: "{{ inventory_hostname[0:-13] }}"
+  when: "'hogs.tswn.us' in inventory_hostname"
+- name: "Set /etc/hosts"
+  ansible.builtin.template:
+    src: "hosts.j2"
+    dest: "/etc/hosts"
+
 # Platform-specific stuff
 - include: freebsd.yml
   when: ansible_distribution == "FreeBSD"
